--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,17 @@ license = "MIT"
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+python-semantic-release = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_variable = [
+    "pyproject.toml:version"
+]
+branch = "main"
+upload_to_pypi = false
+upload_to_release = false
+build_command = "poetry build"
