--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,5 @@ version_variable = [
 ]
 branch = "main"
 upload_to_pypi = false
-upload_to_release = false
+upload_to_release = true
 build_command = "poetry build"
